public class Casa extends ProjetoHabitacional {
    public Casa(int numero, String nome, String cidade, String status, String endereco, String dataInicio, String dataTerminoPrevista, String dataTerminoReal, double tamanhoTerreno, int numeroBanheiros, int numeroQuartos) {
        super(numero, nome, cidade, status, endereco, dataInicio, dataTerminoPrevista, dataTerminoReal, tamanhoTerreno, numeroBanheiros, numeroQuartos);
    }
}
